--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Aurelia</title>
-    <link rel="stylesheet" href="jspm_packages/npm/font-awesome@4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="styles/styles.css">
+    <base href="/">
+    <title>Completely Fictional</title>
+    <link rel="stylesheet" href="styles/font-awesome.min.css">
+    <!--<link rel="stylesheet" href="styles/aurelia.css">-->
+    <link rel="stylesheet" href="styles/custom.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
   <body aurelia-app="main">
     <div class="splash">
-      <div class="message">Aurelia Navigation Skeleton</div>
+      <div class="message">Completely Fictional</div>
       <i class="fa fa-spinner fa-spin"></i>
     </div>
-
-    <script src="jspm_packages/system.js"></script>
+    
+    <script src="lib/system.js"></script>
     <script src="config.js"></script>
     <script>
       System.import('aurelia-bootstrapper');
