removed loader message

--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <base href="/">
     <title>Completely Fictional</title>
     <link rel="stylesheet" href="styles/font-awesome.css">
-    <!--<link rel="stylesheet" href="styles/aurelia.css">-->
     <link rel="stylesheet" href="styles/custom.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
   <body aurelia-app>
     <div class="splash">
-      <div class="message">Completely Fictional</div>
+      <!--<div class="message">Completely Fictional</div>-->
       <i class="fa fa-spinner fa-spin"></i>
     </div>
     
