--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-<!DOCTYPE html><html><head lang="en"><base href="/"><link rel="icon" type="image/ico" href="favicon.ico"><link href="src/css/style.css" rel="stylesheet" type="text/css"><link href="http://www.completelyfictional.com" rel="canonical" type="text/css"><title>Completely Fictional</title></head><body ng-app="completely-fictional" ng-controller="ndxCtrl as ndx"><div class="container"><cf-header></cf-header><cf-column></cf-column><div ui-view></div><cf-footer></cf-footer></div><script src="system.js"></script><script src="config.js"></script><script src="dist/js/bundle.js"></script><script>System.import('dist/js/app.js')</script></body></html>
+<!DOCTYPE html>
+<html>
+
+<head lang="en">
+  <base href="/">
+  <link rel="icon" type="image/ico" href="favicon.ico">
+  <link href="src/css/style.css" rel="stylesheet" type="text/css">
+  <link href="http://www.completelyfictional.com" rel="canonical" type="text/css">
+  <title>Completely Fictional</title>
+</head>
+
+<body>
+  <div class="container" id="app">
+    <cf-header></cf-header>
+    <cf-navigation></cf-navigation>
+    <router-view></router-view>
+    <cf-footer></cf-footer>
+  </div>
+  
+  <script src="scripts/vue.min.js"></script>
+  <script src="scripts/vue-resource.min.js"></script>
+  <script src="scripts/vue-router.min.js"></script>
+  <script src="scripts/system.js"></script>
+  <script>
+    System.import('dist/js/app.js');
+  </script>
+  
+  
+</body>
+
+</html>
