--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head lang="en">
   <base href="/">
   <link rel="icon" type="image/ico" href="favicon.ico">
-  <link href="src/css/style.css" rel="stylesheet" type="text/css">
+  <link href="style.css" rel="stylesheet" type="text/css">
   <link href="http://www.completelyfictional.com" rel="canonical" type="text/css">
   <title>Completely Fictional</title>
 </head>
@@ -22,7 +22,7 @@
   <script src="scripts/vue-router.min.js"></script>
   <script src="scripts/system.js"></script>
   <script>
-    System.import('dist/js/app.js');
+    System.import('scripts/app.js');
   </script>
   
   
