Transition to Autobundler

--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
     <cf-footer></cf-footer>
   </div>
   
-  <script src="scripts/vue.min.js"></script>
-  <script src="scripts/vue-resource.min.js"></script>
-  <script src="scripts/vue-router.min.js"></script>
-  <script src="scripts/system.js"></script>
+  <script src="system.js"></script>
+  <script src="autobundler.config.js"></script>
+  <script src="system.config.js"></script>
   <script>
-    System.import('scripts/app.js');
+    System.import('app/app.js');
   </script>
   
   
