--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <script src="autobundler.config.js"></script>
   <script src="system.config.js"></script>
   <script>
-    System.import('app/main.js');
+    System.import('app/main');
   </script>
   
   
